/*
 * $Id: ChangeLog,v 1.182 2006-07-06 14:01:08 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-07-06 09:01 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Fixed silly missing declaration.

2006-07-06 08:47 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_browse.ch
  * include/i_button.ch
    + SUBCLASS clause added.
  * source/h_button.prg
    * Small implementation changes.
  * source/h_windows.prg
    * ::lReleasing property added, for avoid nest form's release.
    * ::Enable() and ::Disable() properties added. They calls
      ::Enabled := lValue .

2006-07-04 21:36 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    * Moved ooHGRegister:Filter() method to function instead of
      inline command for avoid compiler error.
  * source/c_windows.c
    - Removed hbvmpub.h include file.
    * Changed GetFormObjectByHandle() parameter from LONG to HWND.
  * include/oohg.h
  * source/c_controlmisc.c
  * source/c_windows.c
  * source/h_windows.prg
    * Changed GetControlObjectByHandle() parameter from LONG to HWND.
  * source/c_font.c
  * source/c_help.c
  * source/c_image.c
  * source/c_richeditbox.c
  * source/c_toolbar.c
  * source/c_tree.c
  * source/c_windows.c
  * source/c_winapimisc.c
  * source/h_grid.prg
  * source/h_splitbox.prg
  * source/h_status.prg
  * source/h_tab.prg
    * Fixed warnings.
  * source/makelib.bat
    * Small modifications/optimizations.

2006-07-01 10:53 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    + ooHGRegister() class added. A mini-TDBF class.
    * Auto-ooHGRegister implemented in XBrowse.
    ! Fixed cell edition when database is empty and record is edited.
  * include/oohg.h
    + ValidHandler() and HWNDpush() macros added.
  * source/h_windows.prg