@@ -1,11 +1,20 @@
 /*
- * $Id: ChangeLog,v 1.182 2006-07-06 14:01:08 guerra000 Exp $
+ * $Id: ChangeLog,v 1.183 2006-07-15 23:54:38 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-07-15 18:55 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_windows.c
+    - Removed hbapicls.h include file.
+  * source/h_controlmisc.prg
+    ! Fixed for not to release a control with invalid handler.
+  * source/h_statusbar.prg
+    ! Statusbar's item number is stored in ::nPosition instead of
+      ::hWnd.
 
 2006-07-06 09:01 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_windows.prg
